Codecify particle timelines